--- a/css/styles.css
+++ b/css/styles.css
@@ -5,3 +5,64 @@
     font-family: sans-serif;
     box-sizing: border-box;
 }
+
+
+header {
+    height: 20vh;
+    padding: 16px;
+    color: #999999;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
+header h1,
+header div {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+
+header div {
+    font-size: 16pt;
+}
+
+
+div span {
+    display: inline-block;
+    text-decoration: underline;
+    margin: 0 5px;
+    color: #444444;
+}
+
+
+#generated__list {
+    height: 80vh;
+    list-style: none;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+
+li {
+    border: 1px solid black;
+    width: calc(100% / 6);
+    height: 100%;
+    padding: 10px 10px 50px;
+    font-size: 20pt;
+    color: #999999;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+}
