--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 
+/* general rules */
 * {
     margin: 0;
     padding: 0;
@@ -7,6 +8,7 @@
 }
 
 
+/* page header */
 header {
     height: 20vh;
     padding: 16px;
@@ -19,6 +21,7 @@ header {
 }
 
 
+/* header main elements */
 header h1,
 header div {
     display: flex;
@@ -33,6 +36,7 @@ header div {
 }
 
 
+/* spacebar word */
 div span {
     display: inline-block;
     text-decoration: underline;
@@ -41,6 +45,7 @@ div span {
 }
 
 
+/* generated color palette */
 #generated__list {
     height: 80vh;
     list-style: none;
@@ -53,6 +58,7 @@ div span {
 }
 
 
+/* single color code */
 li {
     border: 1px solid black;
     width: calc(100% / 6);
