--- a/css/styles.css
+++ b/css/styles.css
@@ -60,15 +60,28 @@ div span {
 
 /* single color code */
 li {
-    border: 1px solid black;
     width: calc(100% / 6);
     height: 100%;
     padding: 10px 10px 50px;
     font-size: 20pt;
-    color: #999999;
 
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+    align-items: center;
+}
+
+
+/* displayed color code */
+li span {
+    background-color: #444444;
+    width: 120px;
+    height: 50px;
+    border-radius: 20px;
+    font-weight: bold;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     align-items: center;
 }
