--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,12 @@
 }
 
 
+body {
+    max-height: 100vh;
+    overflow: hidden;
+}
+
+
 /* page header */
 header {
     height: 20vh;
@@ -72,11 +78,27 @@ li {
 }
 
 
+/* icon inside the color palette */
+li i {
+    color: #ffffff;
+    padding: 5px;
+    margin-bottom: 10px;
+    transition: 0.5s color;
+}
+
+
+li i:hover {
+    color: #444444;
+    cursor: pointer;
+}
+
+
 /* displayed color code */
 li span {
     background-color: #444444;
     width: 140px;
     height: 50px;
+    margin-top: 100px;
     border-radius: 16px;
     font-weight: bold;
     letter-spacing: 2px;
@@ -85,4 +107,18 @@ li span {
     flex-direction: row;
     justify-content: center;
     align-items: center;
+}
+
+
+/* copied message */
+#copied {
+    position: absolute;
+    bottom: -100%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #aaaaaa;
+    padding: 10px 20px;
+    border-radius: 20px;
+
+    transition: 0.5s bottom;
 }
