--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,6 @@ div span {
 
 /* single color code */
 li {
-    width: calc(100% / 6);
     height: 100%;
     padding: 10px 10px 50px;
     font-size: 20pt;
@@ -80,10 +79,16 @@ li {
 
 /* icon inside the color palette */
 li i {
+    font-size: 26pt;
     color: #ffffff;
     padding: 5px;
-    margin-bottom: 10px;
+    margin-bottom: 25px;
     transition: 0.5s color;
+}
+
+
+li i:last-of-type {
+    margin-bottom: 0;
 }
 
 
